scripts/k8s-istio/overlays/stag/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stag-dubbo-self  #名称
  labels:
    istio-injection: enabled  #注入istio
spec:
  finalizers:
  - kubernetes
