scripts/k8s-istio/overlays/stag/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-demo-provider-subset
  namespace: dubbo-self
spec:
  host: stag-dubbo-demo-provider

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-demo-consumer-subset
  namespace: dubbo-self
spec:
  host: stag-dubbo-demo-consumer
