scripts/k8s-istio/overlays/stag/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubbo-demo-provider-vs
  namespace: dubbo-self
spec:
  hosts:
    - stag-dubbo-demo-provider
  tcp:
    - route:
        - destination:
            host: stag-dubbo-demo-provider
            port:
              number: 20880
            subset: v1
          weight: 50
        - destination:
            host: stag-dubbo-demo-provider
            port:
              number: 20880
            subset: v2
          weight: 50
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dubbo-demo-consumer-vs
  namespace: dubbo-self
spec:
  hosts:
    - stag-dubbo-demo-consumer
  http:
    - route:
        - destination:
            host: stag-dubbo-demo-consumer
            port:
              number: 8081
            subset: v1
